Can updated taken and return times for keys. Updated keys model to handle null timestamps from server. Error messages will now appear after sending a bad request. Updated card to include pin. Better error handling from un expected response from server.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">companion-app</string>
+    <string name="app_name">Companion App</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">Sign in</string>
 
@@ -27,4 +27,8 @@
     <string name="Taken">Taken</string>
     <string name="Returned">Returned</string>
     <string name="Take_Key">Take Key</string>
+    <string name="remember_me">Remember me</string>
+    <string name="return_key">Return Key</string>
+    <string name="no_keys_to_be_displayed">No keys to be displayed.</string>
+    <string name="Pin">Pin</string>
 </resources>
